Harmonize TeleportWarningDialog

As per crbug.com/788027 Comments 1,6,7:
- Update checkbox text to "Don't show again"
- Move "Don't show" checkbox to content area
- Consolidate text into one paragraph
- Change title text to "Warning: Experimental feature"
- Remove X (Close) button from upper right

window to <account>".  Verify that dialog is Harmonious.

Bug: 788027
Test: Open two multi-profiles, right-click on a window, select "Move
Change-Id: Ia50d338271349d47a947b6d7c9e3a9bc13ade44f
Reviewed-on: https://chromium-review.googlesource.com/941612
Commit-Queue: Greg Levin <glevin@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555121}
Former-commit-id: c214601b49743fdce695fb4b01dbb92aaa69b051