ash/session/teleport_warning_dialog.h
@@ -30,11 +30,11 @@ class TeleportWarningDialog : public views::DialogDelegateView {
   // views::DialogDelegate overrides.
   bool Cancel() override;
   bool Accept() override;
-  View* CreateExtraView() override;
 
   // views::WidgetDelegate overrides.
   ui::ModalType GetModalType() const override;
   base::string16 GetWindowTitle() const override;
+  bool ShouldShowCloseButton() const override;
 
   // views::View overrides.
   gfx::Size CalculatePreferredSize() const override;
